@@ -18,6 +18,8 @@
 package org.openqa.selenium.bidi;
 
 import java.lang.reflect.Type;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
 import java.util.function.Function;
 import org.openqa.selenium.internal.Require;
@@ -48,7 +50,8 @@ public class Command<X> {
       Function<JsonInput, X> mapper,
       boolean sendsResponse) {
     this.method = Require.nonNull("Method name", method);
-    this.params = Map.copyOf(Require.nonNull("Command parameters", params));
+    this.params =
+        Collections.unmodifiableMap(new HashMap<>(Require.nonNull("Command parameters", params)));
     this.mapper = Require.nonNull("Mapper for result", mapper);
     this.sendsResponse = sendsResponse;
   }
