@@ -23,8 +23,6 @@ import static org.openqa.selenium.grid.data.Availability.UP;
 import static org.openqa.selenium.json.Json.MAP_TYPE;
 import static org.openqa.selenium.remote.http.HttpMethod.DELETE;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import java.lang.reflect.Field;
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -34,6 +32,7 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.ServiceLoader;
+import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.logging.Logger;
@@ -44,7 +43,6 @@ import org.openqa.selenium.NoSuchSessionException;
 import org.openqa.selenium.PersistentCapabilities;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebDriverException;
-import org.openqa.selenium.WebDriverInfo;
 import org.openqa.selenium.events.EventBus;
 import org.openqa.selenium.grid.config.Config;
 import org.openqa.selenium.grid.config.ConfigException;
@@ -76,6 +74,8 @@ import org.openqa.selenium.json.Json;
 import org.openqa.selenium.remote.CommandExecutor;
 import org.openqa.selenium.remote.RemoteWebDriver;
 import org.openqa.selenium.remote.SessionId;
+import org.openqa.selenium.remote.WebDriverInfo;
+import org.openqa.selenium.remote.http.ClientConfig;
 import org.openqa.selenium.remote.http.HttpClient;
 import org.openqa.selenium.remote.http.HttpRequest;
 import org.openqa.selenium.remote.http.HttpResponse;
@@ -194,8 +194,10 @@ public class OneShotNode extends Node {
       throw new IllegalStateException("Only expected one session at a time");
     }
 
-    Optional<WebDriver> driver = driverInfo.createDriver(sessionRequest.getDesiredCapabilities());
-    if (!driver.isPresent()) {
+    ClientConfig config = ClientConfig.defaultConfig(); // get config from sessionRequest?
+    Optional<WebDriver> driver =
+        driverInfo.createDriver(sessionRequest.getDesiredCapabilities(), config);
+    if (driver.isEmpty()) {
       return Either.left(new WebDriverException("Unable to create a driver instance"));
     }
 
@@ -213,9 +215,9 @@ public class OneShotNode extends Node {
     LOG.info(
         "Encoded response: "
             + JSON.toJson(
-                ImmutableMap.of(
+                Map.of(
                     "value",
-                    ImmutableMap.of(
+                    Map.of(
                         "sessionId", sessionId,
                         "capabilities", capabilities))));
 
@@ -225,9 +227,9 @@ public class OneShotNode extends Node {
         new CreateSessionResponse(
             getSession(sessionId),
             JSON.toJson(
-                    ImmutableMap.of(
+                    Map.of(
                         "value",
-                        ImmutableMap.of(
+                        Map.of(
                             "sessionId", sessionId,
                             "capabilities", capabilities)))
                 .getBytes(UTF_8)));
@@ -397,7 +399,7 @@ public class OneShotNode extends Node {
         getId(),
         getUri(),
         1,
-        ImmutableSet.of(
+        Set.of(
             new Slot(
                 new SlotId(getId(), slotId),
                 stereotype,
