@@ -25,15 +25,15 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+import org.jspecify.annotations.Nullable;
 import org.openqa.selenium.Platform;
 
 public class ExecutableFinder {
   private static final List<String> ENDINGS =
       Platform.getCurrent().is(WINDOWS)
-          ? Arrays.asList("", ".cmd", ".exe", ".com", ".bat")
+          ? List.of("", ".cmd", ".exe", ".com", ".bat")
           : singletonList("");
 
   /**
@@ -43,6 +43,7 @@ public class ExecutableFinder {
    * @param named The name of the executable to find
    * @return The absolute path to the executable, or null if no match is made.
    */
+  @Nullable
   public String find(String named) {
     File file = new File(named);
     if (canExecute(file)) {
@@ -84,7 +85,7 @@ public class ExecutableFinder {
       }
     }
     String path = env.get(pathName);
-    return path != null ? Arrays.asList(path.split(File.pathSeparator)) : emptyList();
+    return path != null ? List.of(path.split(File.pathSeparator)) : emptyList();
   }
 
   private List<String> macSpecificPathSegments() {
