@@ -24,11 +24,9 @@ import static org.assertj.core.api.InstanceOfAssertFactories.MAP;
 import static org.openqa.selenium.Proxy.ProxyType.PAC;
 import static org.openqa.selenium.json.Json.MAP_TYPE;
 
-import com.google.common.collect.ImmutableMap;
 import com.google.common.reflect.TypeToken;
 import java.io.StringReader;
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
@@ -51,6 +49,7 @@ import org.openqa.selenium.remote.Response;
 import org.openqa.selenium.remote.SessionId;
 
 @Tag("UnitTests")
+@SuppressWarnings("removal")
 class JsonTest {
 
   @Test
@@ -64,25 +63,26 @@ class JsonTest {
     assertThat((Number) new Json().toType("42", Number.class)).isEqualTo(42L);
     assertThat((Integer) new Json().toType("42", Integer.class)).isEqualTo(42);
     assertThat((Double) new Json().toType("42", Double.class)).isEqualTo(42.0);
+    assertThat((Double) new Json().toType("4.2e+1", Double.class)).isEqualTo(42.0);
+    assertThat((Double) new Json().toType("42e+1", Double.class)).isEqualTo(420.0);
+    assertThat((Double) new Json().toType("42e-1", Double.class)).isEqualTo(4.2);
+    assertThat((Double) new Json().toType("4.2e-1", Double.class)).isEqualTo(0.42);
   }
 
   @Test
   void canRoundTripNumbers() {
-    Map<String, Object> original =
-        ImmutableMap.of("options", ImmutableMap.of("args", Arrays.asList(1L, "hello")));
+    Map<String, Object> original = Map.of("options", Map.of("args", List.of(1L, "hello")));
 
     Json json = new Json();
     String converted = json.toJson(original);
     Object remade = json.toType(converted, MAP_TYPE);
 
-    assertThat(remade).isEqualTo(original);
+    assertThat(remade).asInstanceOf(MAP).containsExactlyInAnyOrderEntriesOf(original);
   }
 
   @Test
   void roundTripAFirefoxOptions() {
-    Map<String, Object> caps =
-        ImmutableMap.of(
-            "moz:firefoxOptions", ImmutableMap.of("prefs", ImmutableMap.of("foo.bar", 1)));
+    Map<String, Object> caps = Map.of("moz:firefoxOptions", Map.of("prefs", Map.of("foo.bar", 1)));
     String json = new Json().toJson(caps);
     assertThat(json).doesNotContain("1.0");
 
@@ -95,21 +95,21 @@ class JsonTest {
   @Test
   void shouldCoerceAListOfCapabilitiesIntoSomethingMutable() {
     // This is needed since Grid expects each of the capabilities to be mutable
-    List<Capabilities> expected =
-        Arrays.asList(
-            new ImmutableCapabilities("cheese", "brie"), new ImmutableCapabilities("peas", 42L));
+    ImmutableCapabilities capabilities1 = new ImmutableCapabilities("cheese", "brie");
+    ImmutableCapabilities capabilities2 = new ImmutableCapabilities("peas", 42L);
 
     Json json = new Json();
-    String raw = json.toJson(expected);
+    String raw = json.toJson(List.of(capabilities1, capabilities2));
     List<Capabilities> seen = json.toType(raw, new TypeToken<List<Capabilities>>() {}.getType());
 
-    assertThat(seen).isEqualTo(expected);
+    assertThat(seen).containsExactly(capabilities1, capabilities2);
     assertThat(seen.get(0)).isInstanceOf(MutableCapabilities.class);
+    assertThat(seen.get(1)).isInstanceOf(MutableCapabilities.class);
   }
 
   @Test
   void shouldUseBeanSettersToPopulateFields() {
-    Map<String, String> map = ImmutableMap.of("name", "fishy");
+    Map<String, String> map = Map.of("name", "fishy");
 
     Json json = new Json();
     String raw = json.toJson(map);
@@ -120,7 +120,7 @@ class JsonTest {
 
   @Test
   void shouldAllowUserToPopulateFieldsDirectly() {
-    Map<String, String> map = ImmutableMap.of("theName", "fishy");
+    Map<String, String> map = Map.of("theName", "fishy");
 
     Json json = new Json();
     String raw = json.toJson(map);
@@ -131,7 +131,7 @@ class JsonTest {
 
   @Test
   void settingFinalFieldsShouldWork() {
-    Map<String, String> map = ImmutableMap.of("theName", "fishy");
+    Map<String, String> map = Map.of("theName", "fishy");
 
     Json json = new Json();
     String raw = json.toJson(map);
@@ -159,10 +159,8 @@ class JsonTest {
   void canPopulateAMapThatContainsNull() {
     String raw = "{\"foo\": null}";
 
-    Map<?, ?> converted = new Json().toType(raw, Map.class);
-    assertThat(converted.size()).isEqualTo(1);
-    assertThat(converted.containsKey("foo")).isTrue();
-    assertThat(converted.get("foo")).isNull();
+    Map<String, ?> converted = new Json().toType(raw, Map.class);
+    assertThat(converted).hasSize(1).containsEntry("foo", null);
   }
 
   @Test
@@ -297,7 +295,6 @@ class JsonTest {
     List<?> list = new Json().toType(rawJson, List.class);
 
     Object first = list.get(0);
-    assertThat(first instanceof Map).isTrue();
 
     assertThat(first)
         .asInstanceOf(MAP)
@@ -332,8 +329,7 @@ class JsonTest {
   @Test
   void shouldBeAbleToConvertACommand() {
     SessionId sessionId = new SessionId("session id");
-    Command original =
-        new Command(sessionId, DriverCommand.NEW_SESSION, ImmutableMap.of("food", "cheese"));
+    Command original = new Command(sessionId, DriverCommand.NEW_SESSION, Map.of("food", "cheese"));
     String raw = new Json().toJson(original);
     Command converted = new Json().toType(raw, Command.class);
 
@@ -401,7 +397,7 @@ class JsonTest {
   @Test
   void fromJsonMethodNeedNotOnlyAcceptAString() {
     Json json = new Json();
-    String raw = json.toJson(ImmutableMap.of("cheese", "truffled brie"));
+    String raw = json.toJson(Map.of("cheese", "truffled brie"));
     MapTakingFromJsonMethod res = json.toType(raw, MapTakingFromJsonMethod.class);
 
     assertThat(res.cheese).isEqualTo("truffled brie");
@@ -478,7 +474,7 @@ class JsonTest {
 
   @Test
   void canCoerceSimpleValuesToStrings() {
-    Map<String, Object> value = ImmutableMap.of("boolean", true, "integer", 42, "float", 3.14);
+    Map<String, Object> value = Map.of("boolean", true, "integer", 42, "float", 3.14);
 
     Json json = new Json();
     String raw = json.toJson(value);
